# Ink2Text-desktop

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.pl.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  __main__.py  config.py  main.py  resources.py
app/core/: __init__.py
app/models/: __init__.py  note.py
app/services/: __init__.py  ai_provider.py  image_preparation.py  pdf_export.py
app/storage/: __init__.py  note_repository.py
app/ui/: __init__.py  editor_toolbar.py  help_dialog.py  i18n.py  icons.py  image_import.py  image_section.py  loading_overlay.py  main_window.py  menu_select.py  note_list.py  onboarding_dialog.py  pdf_preview.py  settings_dialog.py  theme.py
docs/: README.md  architecture.md  developer-guide.md  release.md  testing.md  user-guide.md
sample_notes/: README.md
scripts/: README.md  build_windows_exe.py
tests/unit/: test_ai_provider.py  test_app_config.py  test_image_import.py  test_image_preparation.py  test_note_model.py  test_note_repository.py  test_pdf_export.py  test_repository_structure.py
